update jvm args on java 24+